# gojo-funding-the-commons

./: .gitignore  README.md  TASKS.md
ai-agents/v1/: Dockerfile  README.md  app.py  requirements.txt
ai-agents/v1/app/: main.py  models.py
ai-agents/v1/data/: fhenix_training_data.jsonl  layerzero_training_data.jsonl  sign_protocol_training_data.jsonl
ai-agents/v2/core-ai-agent/: Dockerfile  app.py  requirements.txt
ai-agents/v3/: requirements.txt
ai-agents/v3/app/: config.py  main.py
ai-agents/v3/chroma_db/: chroma.sqlite3
ai-agents/v4/: 0.2.27  main.py
ai-agents/v4/data/: layerzero.txt
blockend/: README.md  hardhat.config.js  networks.js  package.json
blockend/contracts/: GojoCore.sol  GojoIP.sol  GojoSignHook.sol  GojoStory.sol  GojoStoryCore.sol  GojoStoryIPWrapper.sol  GojoWrappedIP.sol  Sigma.sol  SimpleNFT.sol
blockend/contracts/interface/: IGojoStoryIPWrapper.sol  IGojoWrappedIP.sol
blockend/contracts/testing/: CrosschainTesting.sol  GojoIP.sol  SimpleNFT.sol
blockend/tasks/: getQuote.js  index.js  setCrosschainAddress.js  testSend.js
blockend/tasks/deploy/: deployGojoIp.js  deployGojoStory.js  index.js
compile-server/: index.js  package-lock.json  package.json  pnpm-lock.yaml
contracts/gojo-token/: Cargo.toml
contracts/gojo-token/src/: events.rs  ft_core.rs  internal.rs  lib.rs  metadata.rs  storage.rs
contracts/gojo-token/tests/: test_basics.rs
contracts/protocol/: Cargo.toml  README.md
contracts/protocol/src/: external.rs  lib.rs  token.wasm
contracts/protocol/tests/: test_basics.rs
fe-testing/: package.json
fe-testing/app/: layout.tsx  page.tsx
fe-testing/components/providers/: onchain-providers.tsx
frontend/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: context.tsx
frontend/lib/: constants.ts  signIn.ts  type.ts  utils.ts
gojo-xmtp-bot/: package-lock.json  package.json
gojo-xmtp-bot/src/: index.ts
lit-testing/: package.json
lit-testing/src/: coinbase.js
testing-chatbot/: main.py  requirements.txt
testing-chatbot/data/: sign.txt
testing-python/: main.py
(+85 files in other folders)
