[package]
name = "gojo-token"
description = "NEP-141 Fungible Token Contract for Gojo Protocol"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gabrielantonyxaviour/gojo"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.10.1-rust-1.82.0"
image_digest = "sha256:48206ab74c774cb03394ef84f0c5e0b458a071331164b5da853de06f3510cbf8"
passed_env = []
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"
borsh = "1.3.0"
serde = "1.0.197"
serde_json = "1.0.116"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.14", features = ["full"] }
near-workspaces = { version = "0.10.0" }
near-units = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.dev]
panic = "abort"

[profile.dev.package.'*']
opt-level = 3
debug = false