[package]
name = "protocol"
description = "Protocol contract for Gojo, No code solution for anyone to build a web3 prototype in 10 minutes"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gabrielantonyxaviour/gojo"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.10.1-rust-1.82.0"
image_digest = "sha256:48206ab74c774cb03394ef84f0c5e0b458a071331164b5da853de06f3510cbf8"
passed_env = []
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = { version = "5.5.0", features = ["unstable", "legacy"] }
near-contract-standards = "5.5.0"
borsh = "1.3.0"
chrono = "0.4.38"
serde = "1.0.197"

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true